<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_skin">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_gravity="bottom"
        android:scaleType="fitXY"
        android:src="@drawable/bottom_image"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppin_bold"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:textSize="@dimen/_24ssp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppin_reg"
                android:text="@string/log_in_to_continue"
                android:textSize="@dimen/_18ssp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppin_bold"
                android:text="@string/email"
                android:textSize="@dimen/_11ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tieEmail"
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppin_bold"
                android:text="@string/password"
                android:textSize="@dimen/_11ssp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiePassword"
                    style="@style/textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                app:backgroundTint="@null"
                android:background="@drawable/gradient"
                android:elevation="@dimen/_5sdp"
                android:fontFamily="@font/poppin_bold"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppin_med"
                    android:text="@string/new_on_here"
                    android:textSize="@dimen/_12ssp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:fontFamily="@font/poppin_bold"
                    android:text="@string/sign_up"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/progress_bar"
                android:indeterminate="true"
                style="@style/SpinKitView.ChasingDots"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:SpinKit_Color="#504B4B"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>